# stock-analyzer

./: .gitignore  LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_settings.py  0003_add_stocks_units_note.py  0004_add_financial_imports.py  0005_add_stocks_cik.py  0006_add_parameter_templates.py  0007_add_dcf_capital_params.py  0008_seed_dcf_templates.py  0009_drop_price_vs_fair_value.py  0010_simplify_valuations.py  0011_add_target_ev_ebit.py  0012_add_stocks_category.py  0013_is_financial_target_pb.py  0014_add_target_ev_fcf.py  0015_add_snapshot_ma_valuations.py  0016_add_jobs_and_results.py
backend/app/: main.py
backend/app/api/: _helpers.py  analyze.py  cik.py  data_availability.py  fetch_all.py  financials.py  health.py  imports.py  jobs.py  market_data.py  parameters.py  portfolio.py  settings.py  snapshots.py  stocks.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/schemas/: __init__.py  financial_import.py  portfolio.py  quarterly_financial.py  setting.py  snapshot.py  stock.py  stock_parameter.py
backend/app/services/: analysis.py  derivation.py  ma_valuation.py
backend/tests/: conftest.py  test_analyze_api.py  test_db_models.py  test_financials_api.py  test_financials_import.py  test_grading.py  test_growth.py  test_health.py  test_parameters_api.py  test_portfolio_api.py  test_settings_api.py  test_snapshots_api.py  test_snapshots_listing_api.py  test_stocks_api.py  test_valuations.py
(+134 files in other folders)
